--- a/css/style.css
+++ b/css/style.css
@@ -1119,10 +1119,11 @@ a {
 .form-modal textarea {
   width: 100%;
   max-width: 760px;
-  min-height: 156px;
+  height: 156px;
+  resize: none;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 16px 0 0 20px;
+  padding: 16px 20px 0 20px;
 }
 
 .modal-close {
