--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
   src:
     local('Gilroy-ExtraBold'),
     local('Gilroy - Extra Bold'),
-    url("../fonts/gilroyextrabold.woff2") format('woff2'),
-    url("../fonts/gilroyextrabold.woff") format('woff');
+    url(../fonts/gilroyextrabold.woff2) format('woff2'),
+    url(../fonts/gilroyextrabold.woff) format('woff');
   font-weight: 800;
   font-style: normal;
 }
@@ -15,8 +15,8 @@
   src:
     local('Gilroy-Light'),
     local('Gilroy - Light'),
-    url("../fonts/gilroylight.woff2") format('woff2'),
-    url("../fonts/gilroylight.woff") format('woff');
+    url(../fonts/gilroylight.woff2) format('woff2'),
+    url(../fonts/gilroylight.woff) format('woff');
   font-weight: 300;
   font-style: normal;
 }
@@ -26,8 +26,8 @@
   src:
     local('OpenSans-light'),
     local('Open Sans - light'),
-    url("../fonts/opensanslight.woff2") format('woff2'),
-    url("../fonts/opensanslight.woff") format('woff');
+    url(../fonts/opensanslight.woff2) format('woff2'),
+    url(../fonts/opensanslight.woff) format('woff');
   font-weight: 300;
   font-style: normal;
 }
@@ -37,8 +37,8 @@
   src:
     local('OpenSans'),
     local('Open Sans'),
-    url("../fonts/opensans.woff2") format('woff2'),
-    url("../fonts/opensans.woff") format('woff');
+    url(../fonts/opensans.woff2) format('woff2'),
+    url(../fonts/opensans.woff) format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -467,7 +467,7 @@ a {
 }
 
 .slider-content h2 {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Arial', sans-serif;;
   font-size: 47px;
   font-weight: 800;
   line-height: 1.19;
@@ -493,7 +493,7 @@ a {
 .slider-content:after {
   content: '01';
 
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Arial', sans-serif;;
   font-size: 179px;
   font-weight: 800;
   line-height: 1;
@@ -536,7 +536,7 @@ a {
 }
 
 .slider-content p {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;;
   font-size: 15px;
   font-weight: 300;
   line-height: 2;
@@ -613,7 +613,7 @@ a {
 }
 
 .slider-table td {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Arial', sans-serif;;
   font-size: 36px;
   font-weight: 300;
   line-height: 1.33;
@@ -627,7 +627,7 @@ a {
 }
 
 .slider-table-header td {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;;
   font-size: 13px;
   font-weight: 300;
   font-style: normal;
@@ -688,33 +688,6 @@ a {
 .features-item:active .features-img {
   background-color: #f0c52e;
 }
-
-/*
-.features-item:first-child a:first-of-type {
-  background-image: url(../img/popular-1.svg);
-}
-
-.features-item:nth-child(2) a:first-of-type {
-  background-image: url(../img/popular-2.svg);
-  background-position: 50% 100%;
-}
-
-.features-item:nth-child(3) a:first-of-type {
-  background-image: url(../img/popular-3.svg);
-}
-
-.features-item:nth-child(4) a:first-of-type {
-  background-image: url(../img/popular-4.svg);
-}
-
-.features-item:nth-child(5) a:first-of-type {
-  background-image: url(../img/popular-5.svg);
-}
-
-.features-item:last-child a:first-of-type {
-  background-image: url(../img/popular-6.svg);
-}
-*/
 
 .features-text {
   font-family: 'Gilroy', 'Arial', sans-serif;
@@ -811,7 +784,7 @@ a {
   display: inline-block;
   vertical-align: middle;
 
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', 'Arial', sans-serif;
   font-size: 18px;
   font-weight: 800;
   line-height: 40px;
@@ -865,7 +838,7 @@ a {
 }
 
 .benefits-list h3 {
-  font-family: Gilroy;
+  font-family: 'Gilroy', 'Arial', sans-serif;;
   font-size: 47.5px;
   font-weight: 800;
   line-height: 1;
@@ -876,7 +849,7 @@ a {
 }
 
 .benefits-list p {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;;
   font-size: 15px;
   font-weight: 300;
   line-height: 2;
@@ -1427,7 +1400,7 @@ h1 {
 }
 
 .breadcrumb li:not(:last-child):after {
-  content: url("../img/nav-arrow.svg");
+  content: url(../img/nav-arrow.svg);
   margin-left: 14px;
   width: 4px;
   height: 7px;
